[metadata]
name = aussys_tools
version = 0.1.0
author = R. Douglas G. Aquino, Filipe A. N. Verri
author_email = aquinordga@gmail.com, filipeverri@gmail.com
description = aussys_tools: autonomous search system tools 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://github.com/aquinordg/aussys_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    split-folders
    scikit-learn
    tensorflow
    matplotlib

[options.packages.find]
where = src
